# llm-wiki-mcp

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: deploy-quartz-pages.yml
quartz-publish/: README.md  prepare-build.sh  preview.sh  quartz.config.ts  quartz.layout.ts
research-wiki/: watch-team-profiles.sh
research-wiki/.wiki/: config.yml
research-wiki/raw/: team_profiles.txt
research-wiki/schema/: AGENTS.md
research-wiki/wiki/: index.md  log.md
research-wiki/wiki/.obsidian/: app.json  graph.json
research-wiki/wiki/concepts/: agentic-ai.md  agentic-systems.md  ai-in-finance.md  data-leakage.md  llm-pipeline-orchestration.md  mlops.md  open-source-ai-tools.md  self-improving-ai-agents.md  spatial-temporal-forecasting.md  weather-forecasting-with-ai.md
research-wiki/wiki/entities/: anthropic.md  berkeley-weather-pipeline.md  carlos.md  christian-marin.md  clawdbot.md  ethereal-ventures.md  fere-ai.md  hector-gomez.md  hugging-face.md  jp-sada.md  les-finemore.md  llm-wiki.md  mcp.md  noaa.md  openclaw-convention.md  qwen3.md  rafael-gallegos.md
research-wiki/wiki/facts/: anthropic-40b-investment.md  christian-marin-llm-deployment.md  fere-ai-10m-funding.md  hector-gomez-derivatives-curator.md  hugging-face-ml-intern.md  jp-sada-infrastructure-oversight.md  llm-wiki-slack-integration.md  noaa-aigfs-efficiency.md  rafael-gallegos-weather-commodities.md
research-wiki/wiki/sources/: mcp-research-team-paper-assignment-profiles.md  slack-digest-ai-channel-updates-april-2026.md
src/llm_wiki/: __init__.py  cli.py  config.py  db.py  ingest_llm.py  ingest_raw.py  integrations.py  jobs.py  link_fetch.py  lint.py  llm.py  page_writer.py  prompts.py  query.py  scaffold.py  search.py  slack_ingest.py  slugify.py
src/llm_wiki/parsers/: __init__.py  base.py  docx.py  html.py  pdf.py  text.py
src/llm_wiki/templates/: AGENTS.md  index.md  log.md  obsidian_graph.json
src/llm_wiki/webapp/: __init__.py  main.py
src/llm_wiki/webapp/routes/: __init__.py  dashboard.py  graph.py  (+4 more)
(+11 files in other folders)
